<resources>
    <string name="app_name">geo_quiz</string>
    <string name="question_text">Canberra is the capital of Australia.</string>
    <string name="res_true">true</string>
    <string name="res_false">false</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">next</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="back_button_text">back</string>
    <string name="backward_image_button">backward</string>
    <string name="forward_image_button">forward</string>
</resources>